tests/qd/errors/invalid_type.qd
fn test( x:i65 -- result:i64 ) {
    dup
}

fn main() {
    42 test printv
}
